# resume-as-code

./: .gitignore  README.md  pyproject.toml
examples/: jane-doe.json  jane-doe.yaml
src/resume_as_code/: cli.py  loader.py  render.py  sample_data.py  schema.py  themes.py
tests/: test_cli.py
